--- a/requirements-docker.txt
+++ b/requirements-docker.txt
@@ -5,8 +5,8 @@ joblib==1.2.0
 pandas>=1.2.2
 scikit-learn>=0.24.1
 wfdb==3.2.0
+mne==1.2.3
 opencv-python
-easydict
 torchsummary
 tensorboardX
 tqdm
