--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ joblib==1.2.0
 pandas==1.2.2
 scikit-learn==0.24.1
 wfdb==3.2.0
-opencv-python
-easydict
 torch==1.13.1
+mne==1.2.3
+opencv-python
 torch-ecg
 torchsummary
 tensorboardX
