--- a/requirements-docker.txt
+++ b/requirements-docker.txt
@@ -1,9 +1,9 @@
-numpy>=1.21.0
-scipy>=1.6.1
+numpy==1.24.2
+scipy==1.10.1
 joblib==1.2.0
 # Cython==0.29.10
-pandas>=1.2.2
-scikit-learn>=0.24.1
+pandas==1.2.4
+scikit-learn==1.2.2
 wfdb==3.2.0
 mne==1.2.3
 opencv-python
