add repository_owner filter for GitHub actions

--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -22,6 +22,7 @@ env:
 jobs:
 
   build:
+    if: contains(fromJson('["wenh06", "DeepPSP"]'), github.repository_owner)
 
     runs-on: ubuntu-20.04
 
