--- a/.github/workflows/check-formatting.yml
+++ b/.github/workflows/check-formatting.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    if: contains(fromJson('["wenh06", "DeepPSP"]'), github.repository_owner)
+    if: contains(fromJson('["wenh06", "kjs11", "DeepPSP"]'), github.repository_owner)
 
     runs-on: ubuntu-20.04
     strategy:
