--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -22,7 +22,7 @@ env:
 jobs:
 
   build:
-    if: contains(fromJson('["wenh06", "DeepPSP"]'), github.repository_owner)
+    if: contains(fromJson('["wenh06", "kjs11", "DeepPSP"]'), github.repository_owner)
 
     runs-on: ubuntu-20.04
 
@@ -30,7 +30,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: recursive
-    - name: Build the Docker image and run test script
+    - name: Build the Docker image
       run: docker build . --file ${{ env.docker_filename }} --tag deeppsp-cinc2023-docker-image:latest
 
     - name: Run the Docker image
