--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -12,6 +12,7 @@ env:
   # revenger_model_dir: ${{ github.workspace }}/models
   # revenger_test_dir: ${{ github.workspace }}/test
   # revenger_output_dir: ${{ github.workspace }}/output
+  download_data_dir: ${{ github.workspace }}/download_data
   revenger_data_dir: /challenge/training_data
   revenger_model_dir: /challenge/models
   revenger_test_dir: /challenge/test
@@ -33,16 +34,24 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file ${{ env.docker_filename }} --tag deeppsp-cinc2023-docker-image:latest
 
+    - name: Download the training_subset data
+      run: |
+        mkdir -p ${{ env.download_data_dir }}
+        python data_reader.py download --db-dir ${{ env.download_data_dir }}
+
     - name: Run the Docker image
       # skip if env.docker_filename is 'test.Dockerfile'
+      # NOTE: mount env.download_data_dir to env.revenger_data_dir
+      # and set it read-only as the CinC2023 challenge setting
       if: ${{ env.docker_filename == 'Dockerfile' }}
       run: |
         docker run \
-          -e CINC2023_REVENGER_TEST=1 \
+          -e CINC2023_REVENGER_TEST=${{ env.CINC2023_REVENGER_TEST }} \
           -e revenger_data_dir=${{ env.revenger_data_dir }} \
           -e revenger_model_dir=${{ env.revenger_model_dir }} \
           -e revenger_test_dir=${{ env.revenger_test_dir }} \
           -e revenger_output_dir=${{ env.revenger_output_dir }} \
+          -v ${{ env.download_data_dir }}:${{ env.revenger_data_dir }}:ro \
           deeppsp-cinc2023-docker-image:latest \
           bash -c "bash test_run_challenge.sh"
         docker ps -a
