--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -37,7 +37,14 @@ jobs:
     - name: Download the training_subset data
       run: |
         mkdir -p ${{ env.download_data_dir }}
-        python data_reader.py download --db-dir ${{ env.download_data_dir }}
+        docker run \
+          -e CINC2023_REVENGER_TEST=${{ env.CINC2023_REVENGER_TEST }} \
+          -e revenger_data_dir=${{ env.revenger_data_dir }} \
+          -v ${{ env.download_data_dir }}:${{ env.revenger_data_dir }} \
+          deeppsp-cinc2023-docker-image:latest \
+          bash -c "python data_reader.py download --db-dir ${{ env.revenger_data_dir }}"
+        docker ps -a
+        docker stop $(docker ps -a -q)
 
     - name: Run the Docker image
       # skip if env.docker_filename is 'test.Dockerfile'
