--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "official_baseline_classifier"]
-	path = official_baseline_classifier
+[submodule "official_baseline"]
+	path = official_baseline
 	url = https://github.com/physionetchallenges/python-example-2023.git
 [submodule "official_scoring_metric"]
 	path = official_scoring_metric
