--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
-# ignore svg, txt, json, html files
-exclude: '^.*\.(svg|txt|json|html)$'
+# ignore svg, txt, json, html files and the folder utils/artifact_pipeline
+exclude: '^.*\.(svg|txt|json|html)$|utils/artifact_pipeline'
 fail_fast: false
 
 repos:
@@ -12,12 +12,12 @@ repos:
     rev: 22.8.0
     hooks:
       - id: black
-        args: [--line-length=128, --exclude="/build|dist|official_baseline|official_scoring_metric|artifact_pipeline|helper_code\.py|run_model\.py|train_model\.py|evaluate_model\.py|remove_data\.py|remove_labels\.py|truncate_data\.py|\.ipynb_checkpoints|fast-test.*\.ipynb", --verbose]
+        args: [--line-length=128, --exclude="/(build|dist|official_baseline|official_scoring_metric)/|/(utils/artifact_pipeline)/|helper_code\.py|run_model\.py|train_model\.py|evaluate_model\.py|remove_data\.py|remove_labels\.py|truncate_data\.py|\.ipynb_checkpoints|fast-test.*\.ipynb", --verbose]
   - repo: https://github.com/PyCQA/flake8
     rev: 5.0.4
     hooks:
       - id: flake8
-        args: [--max-line-length=128, '--exclude=./.*,build,dist,official*,artifact_pipeline,helper_code.py,run_model.py,train_model.py,evaluate_model.py,remove_data.py,remove_labels.py,truncate_data.py,*.ipynb', '--ignore=E501,W503,E203,F841,E402,E231', --count, --statistics, --show-source]
+        args: [--max-line-length=128, '--exclude=./.*,build,dist,official*,utils/artifact_pipeline/*,helper_code.py,run_model.py,train_model.py,evaluate_model.py,remove_data.py,remove_labels.py,truncate_data.py,*.ipynb', '--ignore=E501,W503,E203,F841,E402,E231', --count, --statistics, --show-source]
   - repo: https://github.com/pycqa/isort
     rev: 5.11.5
     hooks:
