--- a/.github/workflows/check-formatting.yml
+++ b/.github/workflows/check-formatting.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Formatting with black & flake8
+name: Formatting with pre-commit
 
 on:
   push:
@@ -35,8 +35,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install -r requirements.txt
-        python -m pip install black==22.8.0 flake8 importlib-metadata==4.8.3 # Testing packages
-    - name: Check code format with black and flake8
+        python -m pip install importlib-metadata==4.8.3 # Testing packages
+    - name: List installed Python packages
       run: |
-        black . --check -v --exclude="/build|dist|official_baseline|official_scoring_metric|artifact_pipeline|helper_code\.py|run_model\.py|train_model\.py|evaluate_model\.py|remove_data\.py|remove_labels\.py|truncate_data\.py|\.ipynb_checkpoints"
-        flake8 . --count --ignore="E501 W503 E203 F841 E402" --show-source --statistics --exclude=./.*,build,dist,official*,artifact_pipeline,helper_code.py,run_model.py,train_model.py,evaluate_model.py,remove_data.py,remove_labels.py,truncate_data.py,*.ipynb
+        python -m pip list
+    - name: Check code format with pre-commit
+      uses: pre-commit/action@v3.0.0
