--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
-# ignore svg, txt, json, html files and the folder utils/artifact_pipeline
-exclude: '^.*\.(svg|txt|json|html)$|utils/artifact_pipeline'
+# ignore svg, txt, json, html files and the folders utils/artifact_pipeline, final_results
+exclude: '^.*\.(svg|txt|json|html)$|utils/artifact_pipeline|final_results'
 fail_fast: false
 
 repos:
