--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -41,6 +41,7 @@ jobs:
       run: |
         mkdir -p ${{ env.download_data_dir }}
         docker run \
+          -e PYTHONUNBUFFERED=1 \
           -e CINC2023_REVENGER_TEST=${{ env.CINC2023_REVENGER_TEST }} \
           -e revenger_data_dir=${{ env.revenger_data_dir }} \
           -v ${{ env.download_data_dir }}:${{ env.revenger_data_dir }} \
@@ -55,6 +56,7 @@ jobs:
       if: ${{ env.docker_main_filename == 'Dockerfile' }}
       run: |
         docker run \
+          -e PYTHONUNBUFFERED=1 \
           -e CINC2023_REVENGER_TEST=${{ env.CINC2023_REVENGER_TEST }} \
           -e revenger_data_dir=${{ env.revenger_data_dir }} \
           -e revenger_model_dir=${{ env.revenger_model_dir }} \
@@ -85,6 +87,7 @@ jobs:
       run: |
         mkdir -p ${{ env.download_data_dir }}
         docker run \
+          -e PYTHONUNBUFFERED=1 \
           -e CINC2023_REVENGER_TEST=${{ env.CINC2023_REVENGER_TEST }} \
           -e revenger_data_dir=${{ env.revenger_data_dir }} \
           -v ${{ env.download_data_dir }}:${{ env.revenger_data_dir }} \
@@ -99,6 +102,7 @@ jobs:
       if: ${{ env.docker_test_filename == 'Dockerfile.torch2' }}
       run: |
         docker run \
+          -e PYTHONUNBUFFERED=1 \
           -e CINC2023_REVENGER_TEST=${{ env.CINC2023_REVENGER_TEST }} \
           -e revenger_data_dir=${{ env.revenger_data_dir }} \
           -e revenger_model_dir=${{ env.revenger_model_dir }} \
