--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -31,6 +31,17 @@ jobs:
     - uses: actions/checkout@v6
       with:
         submodules: recursive
+    - name: Clear unnecessary system components
+      run: |
+        echo "Free space before cleanup:"
+        df -h
+        sudo rm -rf /usr/local/lib/android # will release about 10 GB if you don't need Android
+        sudo rm -rf /usr/share/dotnet # will release about 20GB if you don't need .NET
+        sudo rm -rf /opt/ghc
+        sudo rm -rf /usr/local/share/boost
+        sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+        echo "Free space after cleanup:"
+        df -h
     - name: Build the Docker image
       run: docker build . --file ${{ env.docker_main_filename }} --tag deeppsp-cinc2023-docker-image:latest
 
